Fix classess tablinks style when text is wrapped

--- a/src/ClassesPanel/ClassesPanel.scss
+++ b/src/ClassesPanel/ClassesPanel.scss
@@ -13,6 +13,7 @@
         border: none;
         font-size: 1rem;
         margin: 0;
+        vertical-align: top;
     }
 
     &__tablinks:hover {
